feat(DATA-1442): add global resources