@@ -21,6 +21,7 @@ package org.entur.lamassu.mapper.feedmapper;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
+import org.apache.commons.collections4.CollectionUtils;
 import org.entur.lamassu.model.id.IdBuilder;
 import org.entur.lamassu.model.id.predicate.IdPredicateBuilder;
 import org.entur.lamassu.model.provider.FeedProvider;
@@ -73,11 +74,11 @@ public class IdMappers {
   }
 
   public static String mapVehicleTypeId(String vehicleTypeId, FeedProvider feedProvider) {
-    if (feedProvider.getVehicleTypes() != null) {
+    if (CollectionUtils.isNotEmpty(feedProvider.getVehicleTypes())) {
       return IdMappers.mapId(
         feedProvider.getCodespace(),
         IdMappers.VEHICLE_TYPE_ID_TYPE,
-        feedProvider.getVehicleTypes().get(0).getVehicleTypeId()
+        feedProvider.getVehicleTypes().getFirst().getVehicleTypeId()
       );
     }
 
@@ -105,11 +106,11 @@ public class IdMappers {
   }
 
   public static String mapPricingPlanId(String pricingPlanId, FeedProvider feedProvider) {
-    if (feedProvider.getPricingPlans() != null) {
+    if (CollectionUtils.isNotEmpty(feedProvider.getPricingPlans())) {
       return IdMappers.mapId(
         feedProvider.getCodespace(),
         IdMappers.PRICING_PLAN_ID_TYPE,
-        feedProvider.getPricingPlans().get(0).getPlanId()
+        feedProvider.getPricingPlans().getFirst().getPlanId()
       );
     }
 
